reporte de stock

--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -354,7 +354,7 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <a class="btn btn-warning text-light" href="/report/categories/<% data.product %>" target="_blank">Reporte</a>
+                                        <a class="btn btn-warning text-light" href="/report/stock/<%=  data.product %>" target="_blank">Reporte</a>
                                     </td>
 
                                 </tr>
