--- a/helpers/templates/report.html
+++ b/helpers/templates/report.html
@@ -41,24 +41,22 @@
         </div>
         <div style="margin-top: 2%;">
             <div style="width: 50%;">
-                <p style="font-size: medium; font-family: Arial, Helvetica, sans-serif;">Categoria: {{data.category}}</p>
+                <p style="font-size: medium; font-family: Arial, Helvetica, sans-serif;">Producto: {{data.product}}</p>
             </div>
         </div>
         <div class="row my-3">
             <table class="table table-striped table-bordered">
                 <thead style="background-color: chocolate; color: azure;">
-                    <tr>
-                        <th scope="col">Producto</th>
-                        <th scope="col">Precio</th>
-                        <th scope="col">Cantidad</th>
+                    <tr>                        
+                        <th scope="col" style="width: 50%;">Stock</th>
+                        <th scope="col">Fecha</th>
                     </tr>
                 </thead>
                 <tbody>
                     {{#each data.obj}}
-                    <tr>
-                        <th>{{this.product}}</th>
-                        <td>${{this.price}}</td>
+                    <tr>                        
                         <td>{{this.stock}}</td>
+                        <td>{{this.date}}</td>
                     </tr>
                     {{/each}}
                 </tbody>
