validacion de datos grafico parametrizado

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -61,7 +61,7 @@
                                 <div class="row my-3">
                                     <div class="col-12 d-flex flex-row align-items-center">
                                         <label for="" class="form-label me-2">Cliente: </label>
-                                        <input type="text" class="form-control" name="product" id="cliente-pedido" required>
+                                        <input type="text" class="form-control" name="product" id="cliente-pedido">
                                         <button type="button" class="btn btn-primary ms-3" id="btn-buscar">Buscar</button>
                                     </div>
                                 </div>
@@ -119,6 +119,7 @@
 
                 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
                 <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
                 <input type="text" value="<%= confirmation %>" id="confirmation" hidden>
                 <input type="text" value="<%= mensaje %>" id="mensaje" hidden>
