--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -59,10 +59,11 @@
                                         aria-label="Close"></button>
                                 </div>
                                 <div class="row my-3">
-                                    <div class="col-12 d-flex flex-row align-items-center">
+                                    <div class="col-10 d-flex flex-row align-items-center ms-4">
                                         <label for="" class="form-label me-2">Cliente: </label>
                                         <input type="text" class="form-control" name="product" id="cliente-pedido">
-                                        <button type="button" class="btn btn-primary ms-3" id="btn-buscar">Buscar</button>
+                                        <button type="button" class="btn btn-primary ms-3"
+                                            id="btn-buscar">Buscar</button>
                                     </div>
                                 </div>
                                 <div id="container-canvas"></div>
