reporte productos generales (no da)

--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="col-2 my-2 mx-0 d-flex flex-row align-items-center border-bottom">
-                        <a class="btn btn-warning text-light" href="/report/stock/" target="_blank">Reporte</a>
+                        <a class="btn btn-warning text-light" href="/report/products" target="_blank">Reporte</a>
                     </div>
                 </div>
 
