Gráfico parametrizado de pedidos

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -43,6 +43,36 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#exampleModalOrder">
+                        Gráficos
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModalOrder" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Pedidos hechos en el mes</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="row my-3">
+                                    <div class="col-10 d-flex flex-row align-items-center ms-4">
+                                        <label for="" class="form-label me-2">Fecha: </label>
+                                        <input type="date" placeholder="yyyy-mm-dd" value="" min="2022-01-01">
+                                        <button type="button" class="btn btn-primary ms-3"
+                                            id="btn-buscar">Buscar</button>
+                                    </div>
+                                </div>
+                                <div id="container-canvas"></div>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Ver pedidos
