--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -130,7 +130,7 @@
                                             aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <p class="fs-4 text-center">Cantidad de existencias por productos</p>
+                                        <p class="fs-4 text-center">Top 5 de existencias por productos</p>
                                         <canvas id="stockProducts"></canvas>
                                     </div>
                                 </div>
