--- a/helpers/templates/report.html
+++ b/helpers/templates/report.html
@@ -41,22 +41,26 @@
         </div>
         <div style="margin-top: 2%;">
             <div style="width: 50%;">
-                <p style="font-size: medium; font-family: Arial, Helvetica, sans-serif;">Producto: {{data.product}}</p>
+                <p style="font-size: medium; font-family: Arial, Helvetica, sans-serif;">Categoria: {{data.product}}</p>
             </div>
         </div>
         <div class="row my-3">
             <table class="table table-striped table-bordered">
                 <thead style="background-color: chocolate; color: azure;">
                     <tr>                        
-                        <th scope="col" style="width: 50%;">Stock</th>
-                        <th scope="col">Fecha</th>
+                        <th scope="col" style="width: 50%;">Producto</th>
+                        <th scope="col">Precio</th>
+                        <th scope="col">Stock</th>
+                        <th scope="col">Estado</th>
                     </tr>
                 </thead>
                 <tbody>
                     {{#each data.obj}}
                     <tr>                        
+                        <td>{{this.product}}</td>
+                        <td>{{this.price}}</td>
                         <td>{{this.stock}}</td>
-                        <td>{{this.date}}</td>
+                        <td>{{this.status}}</td>
                     </tr>
                     {{/each}}
                 </tbody>
