Seguimiento de gráfico

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -63,12 +63,12 @@
                                 <div class="row my-3">
                                     <div class="col-10 d-flex flex-row align-items-center ms-4">
                                         <label for="" class="form-label me-2">Fecha: </label>
-                                        <input type="date" placeholder="yyyy-mm-dd" value="" min="2022-01-01">
+                                        <input type="date" placeholder="yyyy-mm-dd" value="" min="2022-01-01" id="fecha">
                                         <button type="button" class="btn btn-primary ms-3"
-                                            id="btn-buscar">Buscar</button>
+                                            id="btn-busqueda">Buscar</button>
                                     </div>
                                 </div>
-                                <div id="container-canvas"></div>
+                                <canvas id="monthOrder"></canvas>
                             </div>
                         </div>
                     </div>
@@ -159,3 +159,4 @@
                 <script src="/alerts.js"></script>
                 <script src="/search.js"></script>
                 <script src="/orders.js"></script>
+                <script src="/ordersMonth.js"></script>
